Fix z-index

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -98,6 +98,7 @@ h2 {
      left: -3%;
      position: fixed;
      transform: translateY(2%);
+     z-index: -2;
 }
 
 .tree2 {
@@ -105,7 +106,7 @@ h2 {
      bottom: 0;
      left: 11%;
      position: fixed;
-     z-index: 1;
+     z-index: -1;
 }
 
 .tree3 {
